--- a/style.css
+++ b/style.css
@@ -180,13 +180,13 @@ body{
 
 .top-nav {
   background-color: #282a2c;
-  /* width:104%; */
-  /* z-index: 1; */
   top: 0;
   overflow-x: hidden;
+  /* margin-left: 200px; */
   height: 50px;
   position: fixed;
-  width: 1300px;
+  /* width: calc(100% - 270px); */
+  width: calc(100% - 70px);
 
 }
   
@@ -219,6 +219,7 @@ body{
   
   .top-nav .kanan{
     float: right;
+    width: fit-content;
     margin-top: 15px;
     background-color: #36393F;
   }
@@ -323,8 +324,8 @@ body{
     margin-left: 628px;
     margin-top: 50px;
     padding-top: 20px;
-    padding-left: 25px;
-    /* width: 500px; */
+    padding-left: 15px;
+    width: calc(100% - 898px);
     height: 100%;
     position: fixed;
     top: 0;
@@ -337,14 +338,14 @@ body{
 h2{
     color: white;
 }
-h3{
+h3, h4{
     text-align: center;
     color: white;
 }
-h4{
+/* h4{
     text-align: center;
     color: white;
-}
+} */
 
 .side-bars img {
     float: left;
@@ -371,5 +372,16 @@ h4{
 }
 
 .user:hover .close {
+    display:block ;
+}
+
+.side-bars .add {
+    float: right;
+    cursor: pointer;
+    line-height: 25px;
+    /* display: none; */
+}
+
+.user:hover .add {
     display:block ;
 }
